--- a/Analytics/analytics.css
+++ b/Analytics/analytics.css
@@ -1,4 +1,4 @@
-.dashboard {
+.dashboard-container {
   height: min-content;
   background-color: aliceblue;
   border-radius: 5px;
@@ -18,8 +18,13 @@
   text-align: center;
 }
 
-.tab-content {
+.tab-content{
   width: 100%;
+}
+
+.tab-content h1{
+  font-size: 1.5rem;
+  color: #0C356A;
 }
 
 .tab {
@@ -39,22 +44,33 @@
   background-color: #ecf3f3;
 }
 
-.menu-links .nav-link a[href*="../Analytics/analytics.php"] {
+.nav-links .nav-link a[href*="../Analytics/analytics.php"] {
   border: white 2px solid;
   border-radius: 5px;
 }
 
-.content {
+.content{
   display: flex;
-  justify-content: space-between;
-  background-color: #ecf3f3;
+  flex-direction: column;
+  background-color: #ecf3d3;
   padding: 5px;
   margin-block: 5px;
+}
+
+.content-row{
+  display: flex;
+  justify-content: space-between;
+}
+
+.content-row p {
+    margin-top: 0;
+    margin-bottom: 0.1rem;
 }
 
 .form {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -72,6 +88,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 5px;
 }
 
 label {
