--- a/EarlyExit/EarlyExit.css
+++ b/EarlyExit/EarlyExit.css
@@ -1,3 +1,6 @@
+body{
+  min-width: fit-content;
+}
 .main-content .heading h1 {
   margin: 15px;
   color: #607070;
@@ -124,7 +127,7 @@ input[type="button"] {
   line-height: 1.5;
 }
 
-.menu-links .nav-link a[href*="../EarlyExit/EarlyExit.php"] {
+.nav-links .nav-link a[href*="../EarlyExit/EarlyExit.php"] {
   border: white 2px solid;
   border-radius: 5px;
 }
@@ -147,14 +150,30 @@ td {
 }
 
 th {
-  background-color: #f2f2f2; /* Background color for header cells */
+  background-color: #343f71;
+  color: #fff;
+}
+.table td, .table th {
+    padding: 0.3rem;
+    vertical-align: middle;
+    border-top: 1px solid #dee2e6;
+}
+tr:nth-child(even) {
+  background-color: #f7f7f7;
+}
+tr:nth-child(odd) {
+  background-color:#4858a03d;
 }
 
+.image-column{
+  width: 102px;
+  height: 102px;
+}
 .table-image{
   width: 100px;
   height: 100px;
+  border-radius: 5px;
   padding: 2px;
-  margin: 2px;
 }
 
 .access-denied{
