--- a/Visitor/showVisitor.css
+++ b/Visitor/showVisitor.css
@@ -1,3 +1,7 @@
+body{
+  min-width: fit-content;
+}
+
 .main-content .heading h1 {
   margin: 15px;
   color: #607070;
@@ -8,10 +12,9 @@
 
 .form-container {
   background-color: #fff;
-  height: 250px;
+  height: 150px;
   width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -19,11 +22,10 @@
 /* Add this CSS to your existing CSS file or in a separate style.css file */
 
 .form {
-  margin-top: 50px;
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  background-color:lightgray;
+  background-color: #f7f7f7;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -38,28 +40,13 @@
   margin-bottom: 10px;
 }
 
-.form-status {
-  display: flex;
-  flex-direction: row;
-  /* justify-content: space-between; */
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.form-status .label{
-  margin-right: 10px;
-}
-
 .label {
+  flex: 1;
+  text-align: right;
   padding-right: 10px;
 }
 
-#status{
-  padding: 5px 10px;
-  border-radius: 5px;
-}
-
-.input{
+.input {
   flex: 2;
   padding: 10px;
   width: 100%;
@@ -72,19 +59,13 @@ input[type="button"] {
   display: block;
   margin: 0 auto;
   padding: 10px 20px;
-  background-color: #0C356A;
+  background-color: #695cfe;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
 }
-
-input[type="submit"]:hover,
-input[type="button"]:hover{
-  background-color: #071952;
-}
-
 
 /* Style the form as per your requirements */
 
@@ -101,7 +82,6 @@ input[type="button"]:hover{
 
 .card-container .card {
   display: flex;
-  flex-direction: row;
   align-items: center;
   width: 250px;
   height: 120px;
@@ -123,8 +103,6 @@ input[type="button"]:hover{
 .card-container .image {
   width: 100px;
   height: 100px;
-  margin-left: 5px;
-  border-radius: 5px;
   flex-shrink: 0;
   overflow: hidden;
 }
@@ -150,7 +128,60 @@ input[type="button"]:hover{
   line-height: 1.5;
 }
 
-.nav-links .nav-link a[href*="../Search/search.php"] {
+.nav-links .nav-link a[href*="../Visitor/Visitor.php"]{
   border: white 2px solid;
   border-radius: 5px;
+}
+
+.table {
+  margin: 0 auto; /* Center the table */
+  border-collapse: collapse; /* Collapse border spacing */
+}
+
+table {
+  width: 100%; /* Make the table take full width */
+  margin: 10px 0; /* Margin around the table */
+}
+
+th,
+td {
+  padding: 5px 10px; /* Padding for cells */
+  border: 1px solid #ddd; /* Border style */
+  text-align: left; /* Align text to the left */
+}
+
+th {
+  background-color: #343f71;
+  color: #fff;
+}
+.table td, .table th {
+    padding: 0.3rem;
+    vertical-align: middle;
+    border-top: 1px solid #dee2e6;
+}
+tr:nth-child(even) {
+  background-color: #f7f7f7;
+}
+tr:nth-child(odd) {
+  background-color:#4858a03d;
+}
+
+.image-column {
+  width: 102px;
+  height: 102px;
+}
+.table-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  padding: 2px;
+}
+
+.access-denied {
+  width: 100%;
+  height: calc(100vh - 80px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
