--- a/mail/mail.css
+++ b/mail/mail.css
@@ -45,13 +45,18 @@ section.home {
 input[type="submit"] {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #0c356a;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
   font-size: 16px;
+}
+
+input[type="submit"]:hover{
+  background-color: darkblue;
+  color: #f4f4f4;
 }
 
 #statusMessages {
