--- a/styles.css
+++ b/styles.css
@@ -140,8 +140,7 @@
 .home-section nav {
   display: flex;
   justify-content: space-between;
-  height: 70px;
-  /* background: #AA0000; */
+  height: 50px;
   background: #0C356A;
   display: flex;
   align-items: center;
@@ -181,23 +180,32 @@ nav .sidebar-button i {
   padding-top: 70px;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 70px;
 }
 
 footer {
   position: fixed;
   bottom: 0;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #aa0000;
+  text-align: center;
+  background: #0C356A;
   color: #f5f5f5;
+  height: fit-content;
+  width: calc(100% - 240px);
+  left: 240px;
+  z-index: 100;
+  padding: 0 5px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  transition: all 0.5s ease;
 }
 
 footer p {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 5px;
+  font-size: 0.6rem;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  padding: 3px;
 }
 
 .access-denied {
@@ -237,8 +245,16 @@ footer p {
     width: calc(100% - 60px);
     left: 60px;
   }
+  .home-section footer {
+    width: calc(100% - 60px);
+    left: 60px;
+  }
 
   .sidebar.active ~ .home-section nav {
+    width: calc(100% - 220px);
+    left: 220px;
+  }
+  .sidebar.active ~ .home-section footer {
     width: calc(100% - 220px);
     left: 220px;
   }
@@ -267,8 +283,16 @@ footer p {
     width: 100%;
     left: 0;
   }
+  .home-section footer {
+    width: 100%;
+    left: 0;
+  }
 
   .sidebar.active ~ .home-section nav {
+    left: 60px;
+    width: calc(100% - 60px);
+  }
+  .sidebar.active ~ .home-section footer {
     left: 60px;
     width: calc(100% - 60px);
   }
