--- a/Analytics/analytics.css
+++ b/Analytics/analytics.css
@@ -18,13 +18,13 @@
   text-align: center;
 }
 
-.tab-content{
+.tab-content {
   width: 100%;
 }
 
-.tab-content h1{
+.tab-content h1 {
   font-size: 1.5rem;
-  color: #0C356A;
+  color: #0c356a;
 }
 
 .tab {
@@ -49,7 +49,7 @@
   border-radius: 5px;
 }
 
-.content{
+.content {
   display: flex;
   flex-direction: column;
   background-color: #ecf3d3;
@@ -57,14 +57,14 @@
   margin-block: 5px;
 }
 
-.content-row{
+.content-row {
   display: flex;
   justify-content: space-between;
 }
 
 .content-row p {
-    margin-top: 0;
-    margin-bottom: 0.1rem;
+  margin-top: 0;
+  margin-bottom: 0.1rem;
 }
 
 .form {
@@ -72,11 +72,11 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 0 auto;
   padding: 10px;
-  background-color: #f7f7f7;
+  /* background-color: #f7f7f7; */
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -89,33 +89,35 @@
   justify-content: space-between;
   align-items: center;
   margin: 5px;
+  width: 250px;
 }
 
 label {
   flex: 1;
   text-align: right;
   padding-right: 10px;
+  margin-bottom: 0;
 }
 
 input,
 textarea {
   flex: 2;
-  padding: 10px;
+  padding: 4px;
   width: 100%;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
 .btn {
-  display: block;
-  margin: 0 auto;
-  padding: 10px 20px;
-  background-color: #695cfe;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
+    display: block;
+    margin: 0 auto;
+    /* padding: 10px 20px; */
+    background-color: #0C356A;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 /* Styling for the "See More" link */
@@ -133,7 +135,7 @@ textarea {
   color: #0056b3; /* Darker blue on hover */
 }
 
-.access-denied{
+.access-denied {
   width: 100%;
   height: calc(100vh - 80px);
   display: flex;
