--- a/seemore/seemore.css
+++ b/seemore/seemore.css
@@ -1,4 +1,4 @@
-body{
+body {
   min-width: fit-content;
 }
 
@@ -48,25 +48,25 @@ th {
   background-color: #343f71;
   color: #fff;
 }
-.table td, .table th {
-    padding: 0.3rem;
-    vertical-align: middle;
-    border-top: 1px solid #dee2e6;
+.table td,
+.table th {
+  padding: 0.3rem;
+  vertical-align: middle;
+  border-top: 1px solid #dee2e6;
 }
 tr:nth-child(even) {
   background-color: #f7f7f7;
 }
 tr:nth-child(odd) {
-  background-color:#4858a03d;
+  background-color: #4858a03d;
 }
 
-.table-image{
+.table-image {
   width: 100px;
   height: 100px;
   padding: 2px;
   margin: 2px;
 }
-
 
 .tab-content {
   width: 100%;
@@ -102,53 +102,64 @@ tr:nth-child(odd) {
   margin-block: 5px;
 }
 
+.form-container {
+  margin-block: 20px;
+}
 .form {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  max-width: 400px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 20px;
   background-color: #f7f7f7;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
 
+.form-heading {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: darkblue;
+}
+.form .table-image {
+  width: 100px;
+  height: 100px;
+  padding: 2px;
+  margin: 2px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
 .form-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 }
 
-label {
-  flex: 1;
+.form-row label {
+  flex: 2;
   text-align: right;
   padding-right: 10px;
+  color: darkblue;
+  margin-bottom: 0;
+}
+.form-row p {
+  flex: 3;
+  text-align: left;
+  padding-right: 10px;
+  color: darkblue;
+  margin-bottom: 0;
 }
 
 input,
-textarea {
-  flex: 2;
+textarea,
+select {
+  flex: 1;
   padding: 10px;
   width: 100%;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
-
-.btn {
-  display: block;
-  margin: 0 auto;
-  padding: 10px 20px;
-  background-color: #695cfe;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
 }
 
 /* Styling for the "See More" link */
@@ -166,7 +177,7 @@ textarea {
   color: #0056b3; /* Darker blue on hover */
 }
 
-.access-denied{
+.access-denied {
   width: 100%;
   height: calc(100vh - 80px);
   display: flex;
