--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ body {
 
 .login-form h1 {
   margin-bottom: 20px;
+  margin-top: 0px;;
   color: darkblue; /* Dark blue text color */
   font-size: 2.5rem; /* Increased font size */
 }
@@ -55,9 +56,9 @@ body {
 
 .login-form input {
   width: 100%;
-  background: #a5d3e588; /* Light grey background color */
+  background: #90cde65e; /* Light grey background color */
   padding: 15px;
-  color: #f5f5f5;
+  color: #fff;
   margin-bottom: 20px;
   box-sizing: border-box;
   border: 1px solid #a5d3e588; /* Light grey border */
@@ -65,7 +66,24 @@ body {
   font-size: 16px;
 }
 .login-form input::placeholder{
-  color: #d4c6e6;
+  color: #fff;
+  letter-spacing: 2px;
+}
+
+.role-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.column{
+  display: flex;
+}
+.role-row label {
+  font-size: 16px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .login-form button {
@@ -81,6 +99,10 @@ body {
 
 .login-form button:hover {
   background-color: darkblue; /* Darker green on hover */
+}
+
+.signup-button, .forget-password{
+  color: #104891;
 }
 footer {
   position: fixed;
