login button fixed in reset password and signup

--- a/forgotPassword.css
+++ b/forgotPassword.css
@@ -1,79 +1,88 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #010108;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #010108;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    max-width: 400px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 400px;
+  width: 100%;
 }
 
 .card::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('gate_desk.png');
+  background-image: url("gate_desk.png");
   filter: blur(2px);
   background-size: cover;
   background-position: center;
   z-index: -1;
 }
 h2 {
-    margin-top: 0;
-    text-align: center;
+  margin-top: 0;
+  text-align: center;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 input[type="email"],
 input[type="password"],
 input[type="text"] {
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 button {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
+#login-link{
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 .error {
-    color: #ff0000;
-    margin-bottom: 10px;
-    text-align: center;
+  color: #ff0000;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 footer {
@@ -118,7 +127,7 @@ a {
   color: white; /* Set text color to white */
 }
 
-a:hover{
+a:hover {
   color: #14af8d;
 }
 
@@ -126,9 +135,8 @@ i {
   margin-right: 5px; /* Adjust spacing between icon and text */
 }
 
-
 @media (max-width: 768px) {
-  .card{
+  .card {
     width: 70%;
     min-height: 350px;
     position: absolute;
@@ -138,4 +146,3 @@ i {
     background-image: url("./gate_mobile.png");
   }
 }
-
